<resources>
    <string name="app_name">Find My Farmer</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="login_btn">Log In</string>
    <string name="register_link">Don\'t have an account?</string>
    <string name="register_btn">Sign Up</string>
    <string name="forgot_password_link"><u>Forgot Password?</u></string>
    <string name="facebook_app_id">1553403721513069</string>
    <string name="fb_login_protocol_scheme">fb1553403721513069</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password_title">Forgot your password?</string>
    <string name="reset_password_instructionLine1">Forgot your password?
        \nEnter your registered email
        \nReset link will be sent to you</string>
    <string name="reset_password_instructionLine2">We will send you a password reset</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_farmer">Are you a farmer?</string>
    <string name="next">Next</string>

    <string-array name="Product_Measurement_Units">
        <item>Quantity</item>
        <item>Kg(s)</item>
        <item>lb(s)</item>
        <item>Liter(s)</item>
    </string-array>
</resources>
