<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndRegistration.View.LoginFragment">

<ScrollView
    android:id="@+id/ScrollView"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#FFFFFF"
android:backgroundTint="#FFFFFF"
android:scrollbarSize="0dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLoginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity">

        <Space
            android:layout_width="209dp"
            android:layout_height="67dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@+id/GSignIn" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:textColor="#2B2B2B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/input_email_hint"

            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPageLogo" />


        <ImageView
            android:id="@+id/loginPageLogo"
            android:layout_width="186dp"
            android:layout_height="144dp"
            android:layout_marginTop="48dp"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/farm" />

        <TextView
            android:id="@+id/forgotPswrdLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:text="@string/forgot_password_link"
            android:textColor="#FF5252"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        <TextView
            android:id="@+id/registerAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:text="@string/register_btn"
            android:textColor="#FF5252"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/GSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toStartOf="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn">

        </com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/FBSignIn"
            android:layout_width="33dp"
            android:layout_height="27dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/GSignIn"
            app:layout_constraintStart_toEndOf="@+id/GSignIn" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_secondary"
            android:backgroundTint="#11EF82"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/registerAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
</ScrollView>
</FrameLayout>