<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndRegistration.View.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resetPasswordConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/ResetPasswordTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/reset_password_title"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resetPassword_instructions"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/reset_password_instructionLine1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/ResetPasswordTextview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ResetPasswordTextview"
            app:layout_constraintTop_toBottomOf="@+id/ResetPasswordTextview" />

        <TextView
            android:id="@+id/resetPassword_instructions2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/reset_password_instructionLine2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/ResetPasswordTextview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ResetPasswordTextview"
            app:layout_constraintTop_toBottomOf="@+id/resetPassword_instructions" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/resetPassword_instructions2"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/resetPassword_instructions2"
            app:layout_constraintTop_toBottomOf="@+id/resetPassword_instructions2" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/design_default_color_secondary"
            android:backgroundTint="#11EF82"
            android:fontFamily="sans-serif-light"
            android:text="Send Reset"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>