<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:scrollbarSize="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLoginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".MainActivity">

            <Space
                android:layout_width="209dp"
                android:layout_height="67dp"
                app:layout_constraintEnd_toEndOf="@+id/FBSignIn"
                app:layout_constraintStart_toStartOf="@+id/FBSignIn"
                app:layout_constraintTop_toBottomOf="@+id/FBSignIn" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/input_password_hint"
                android:inputType="textPassword"
                android:textColor="#2B2B2B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:ems="10"
                android:hint="@string/input_email_hint"

                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPageLogo" />


            <ImageView
                android:id="@+id/loginPageLogo"
                android:layout_width="186dp"
                android:layout_height="144dp"
                android:layout_marginTop="4dp"
                android:focusableInTouchMode="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/farm" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:background="#11EF82"
                android:fontFamily="sans-serif-medium"
                android:hapticFeedbackEnabled="true"
                android:stateListAnimator="@null"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/forgotPswrdLink" />

            <TextView
                android:id="@+id/forgotPswrdLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:text="@string/forgot_password_link"
                android:textColor="#FF5252"
                app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/GSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/loginBtn"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="@+id/loginBtn"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn" >

            </com.google.android.gms.common.SignInButton>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/FBSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/GSignIn"
                app:layout_constraintStart_toStartOf="@+id/GSignIn"
                app:layout_constraintTop_toBottomOf="@+id/GSignIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>

