<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@drawable/gradient"
    tools:context=".LoginAndRegistration.View.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLoginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="0dp"
        android:layout_marginTop="-20dp"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/FarmerLogo"
            android:layout_width="238dp"
            android:layout_height="262dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:src="@drawable/findmyfarmer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginTop="236dp"
            android:background="@color/fui_transparent"
            android:ems="10"
            android:hint="@string/input_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/FarmerLogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="21dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"
            android:text="OR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginBtn" />

        <TextView
            android:id="@+id/forgotPswrdLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:layout_marginTop="97dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:text="@string/forgot_password_link"
            android:textColor="@color/WhiteColor"
            app:layout_constraintBottom_toTopOf="@+id/registerAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputEmail" />

        <TextView
            android:id="@+id/registerAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="121dp"
            android:layout_marginBottom="76dp"
            android:clickable="true"
            android:text="@string/register_link"
            android:textColor="@color/WhiteColor"
            app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="@+id/loginBtn"
            app:layout_constraintTop_toTopOf="@+id/inputEmail" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/GSignIn"
            android:layout_width="394dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toTopOf="@+id/FBSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"></com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/FBSignIn"
            android:layout_width="391dp"
            android:layout_height="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginTop="49dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="44dp"
            android:background="@color/fui_transparent"

            android:ems="10"
            android:hint="@string/fui_password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/forgotPswrdLink"
            app:layout_constraintEnd_toEndOf="@+id/registerAccount"
            app:layout_constraintHorizontal_bias="0.961"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputEmail"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="235dp"
            android:layout_height="46dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="162dp"
            android:background="@drawable/login"
            android:text="login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="@+id/GSignIn"
            app:layout_constraintTop_toTopOf="@+id/inputEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>